manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: test
  labels:
    app: hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      serviceAccountName: hello-world-service
      containers:
      - name: hello-world 
        image: senzakstest.azurecr.io/zachtest:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
