manifests/redis.yml
kind: Service
apiVersion: v1
metadata:
  name: redis
  labels:
    app: redis
    visualize: "true"
spec:
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
  selector:
    app: redis

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
    visualize: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      version: "6.0.7"
  template:
    metadata:
      labels:
        app: redis
        version: "6.0.7"
        visualize: "true"
    spec:
      containers:
      - name: redis
        image: redis:6.0.7
        imagePullPolicy: Always
        livenessProbe:
          tcpSocket:
            port: 6379
        ports:
        - name: redis-server
          containerPort: 6379
