manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: test
spec:
  type: ClusterIP
  ports:
    - port: 3000
      name: http
  selector:
    app: hello-world
