manifests/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world
  namespace: test
spec:
  hosts:
  - "*"
  gateways:
  - test-gateway
  http:
  - name: "hello-world-routes"
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: hello-world.test.svc.cluster.local
        port: 
          number: 3000
